<resources>
    <string name="app_name">RAFroid</string>
    <string name="settings">Podesavanja Aplikacije</string>
    <string name="about">O Aplikaciji</string>
    <string name="error_connecting_to_server">Greska prilikom konekcije</string>
    <string name="checking_for_update">Proveravam najnoviju verziju</string>
    <string name="updating_exams">Azuriranje Testova</string>
    <string name="updating_classes">Azuriranje Predavanja</string>
    <string name="update_calender">Azuriram Kalendar</string>
    <string name="update_consultations">Azuriram Konsultacije</string>
    <string name="update_news">Azuriram Novosti</string>
    <string name="classes_schedule">Raspored Predavanja</string>
    <string name="curriculum_schedule">Raspored Kolokvijuma</string>
    <string name="exam_schedule">Raspored Ispita</string>
    <string name="teaching_schedule">Kalendar Nastave</string>
    <string name="consultation_schedule">Raspored Konsultacija</string>
    <string name="news">Vesti</string>
    <string name="exit">Izlaz</string>
    <string name="schedule">Raspored</string>
    <string name="search">Pretraga</string>
    <string name="search_it">Pretrazi</string>
    <string name="subject">Predmet</string>
    <string name="groups">Grupe</string>
    <string name="time">Termin</string>
    <string name="type">Tip</string>
    <string name="lecturer">Nastavnik</string>
    <string name="day">Dan</string>
    <string name="classroom">Ucionica</string>
    <string name="select_time">Izaberite Termin</string>
    <string name="time1">Vreme</string>
    <string name="date">Datum</string>
    <string name="professor">Profesor</string>
    <string name="select_time1">Izaberite Vreme</string>
    <string name="select_date">Izaberite Datum</string>
    <string name="exit_dialog_message">Da li ste sigurni da zelite da izadjete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_for_showing">Nema podataka za prikazivnaje</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="clear_cache_data">Brisanje kesiranih podataka</string>
    <string name="update_data">Azuriranje podataka</string>
    <string name="update_completed">Azuriranje podataka je zavrseno</string>
    <string name="clear_data_dialog_message">Da li ste sigurni da zelite da izbrisete sve kesirane podatke?</string>
    <string name="cached_data_deleted">Kesirani podaci obrisani. Preporucuje se preuzimanje novih podataka</string>
    <string name="dark_theme">Mracna tema aplikacije</string>

    <string name="notifications_admin_channel_name">rafroid notification channel</string>
    <string name="notifications_admin_channel_description">rafroid default notification channel</string>
    <string name="data">Podaci</string>
    <string name="view">Izgled</string>
    <string name="personalization">Presonalizacija</string>
    <string name="subjects">Predmeti</string>
    <string name="filter_personalization">Personalizacija filtera</string>

    <!--Strings related to Calendar-->
    <string name="curriculums">Kolokvijumska nedelja:</string>
    <string name="finals">Ispitni rok:</string>
    <string name="vacant_days">Neradni dan:</string>


    <!--Strings related to About-->
    <string name="aboutContent">Ova aplikacija je izradjena od strane studenata Racunarskog fakulteta tokom takmicenja "Rafroid", na kojem su studenti imali zadatak da naprave mobilnu verziju rasporeda fakultetskih aktivnosti. Kontakt informacije Racunarskog fakulteta: </string>
    <string name="aboutPhoneTextView">011 2627613</string>
    <string name="aboutMailTextView">sekretarijat@raf.rs</string>
    <string name="aboutApplicationMadeBy">Aplikaciju izradili:</string>
    <string name="aboutDejanNameTextView">Dejan Radmanović</string>
    <string name="aboutStefanNameTextView">Stefan Cvetić</string>
</resources>
