<?xml version="1.0" encoding="utf-8"?>

<!--TODO: Fix the menu icons-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_classes_schedule"
            android:icon="@drawable/ic_predavanja"
            android:title="@string/classes_schedule" />

        <item
            android:id="@+id/nav_curriculum_schedule"
            android:icon="@drawable/ic_kolokvijumi"
            android:title="@string/curriculum_schedule" />

        <item
            android:id="@+id/nav_exam_schedule"
            android:icon="@drawable/ic_ispiti"
            android:title="@string/exam_schedule" />
    </group>

    <group
        android:id="@+id/nav_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teaching_schedule"
            android:icon="@drawable/ic_calendar_nastave"
            android:title="@string/teaching_schedule" />

        <item
            android:id="@+id/nav_consultation_schedule"
            android:icon="@drawable/ic_kolokvijumi"
            android:title="@string/consultation_schedule" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_vesti"
            android:title="@string/news" />
    </group>

    <group
        android:id="@+id/nav_group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_info"
            android:title="@string/exit" />
    </group>


</menu>