<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.binarylab.rafroid.viewmodel.VMClassScheduleSearch"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/class_schedule_filter"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_marginBottom="@dimen/standard_layout_margin"
            android:layout_marginEnd="@dimen/standard_layout_margin"
            android:layout_marginStart="@dimen/standard_layout_margin"
            android:layout_marginTop="@dimen/standard_layout_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <AutoCompleteTextView
                    android:id="@+id/spSubject"
                    android:layout_width="0dp"
                    android:hint="@string/subject"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/standard_layout_margin"
                    android:layout_marginStart="@dimen/standard_layout_margin"
                    android:layout_marginTop="@dimen/standard_layout_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_element_margin"
                    android:layout_marginStart="@dimen/standard_layout_margin"
                    android:layout_marginEnd="@dimen/standard_layout_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spSubject" />

                <Spinner
                    android:id="@+id/spLecturer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_element_margin"
                    android:layout_marginStart="@dimen/standard_layout_margin"
                    android:layout_marginEnd="@dimen/standard_layout_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spType" />

                <EditText
                    android:id="@+id/spGroups"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/groups"
                    android:layout_marginTop="@dimen/standard_element_margin"
                    android:layout_marginStart="@dimen/standard_layout_margin"
                    android:layout_marginEnd="@dimen/standard_layout_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spLecturer" />

                <Spinner
                    android:id="@+id/spDayOfWeek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_element_margin"
                    android:layout_marginStart="@dimen/standard_layout_margin"
                    android:layout_marginEnd="@dimen/standard_layout_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spGroups" />

                <EditText
                    android:id="@+id/spTime"
                    android:hint="@string/time"
                    android:layout_width="0dp"
                    android:inputType="time"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_element_margin"
                    android:layout_marginStart="@dimen/standard_layout_margin"
                    android:layout_marginEnd="@dimen/standard_layout_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spDayOfWeek" />

                <Spinner
                    android:id="@+id/spClassroom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_element_margin"
                    android:layout_marginStart="@dimen/standard_layout_margin"
                    android:layout_marginEnd="@dimen/standard_layout_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spTime" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/search_it"
                    android:layout_marginTop="@dimen/standard_element_margin"
                    android:layout_marginEnd="@dimen/standard_layout_margin"
                    android:layout_marginStart="@dimen/standard_layout_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spClassroom" />


            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
    </ScrollView><!--End of the filter view-->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/class_schedule_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{vm.inputVisible ? View.GONE : View.VISIBLE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_filter_white"
            android:layout_marginEnd="@dimen/standard_large_margin"
            android:layout_marginBottom="@dimen/standard_large_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    </FrameLayout>
</layout>